# ga4-mcp-app

./: package-lock.json
backend/: .gitignore  analytics.py  auth.py  chat.py  config.py  formatter.py  ga4_client.py  main.py  mcp_server.py  pyproject.toml  request_builder.py  requirements.txt  tool_registry.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: DataTable.tsx  MessageBubble.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: Chat.tsx  Landing.tsx
frontend/src/types/: auth.ts  chat.ts
