[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "google-generativeai>=0.8.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
